# agentx-kit

./: .gitignore  DESIGN.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.agentx/: llm_cache.sqlite
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  installation.md  library-usage.md  providers.md  quickstart.md  release-0.12.0.md  release-0.15.0.md  release-0.16.0.md  release-0.17.1.md  release-0.18.0.md  release-1.0.0.md
docs/cli/: agent.md  azure.md  cache.md  dashboard.md  flow.md  graph.md  index.md  mcp.md  misc.md  new.md  prompt.md  rag.md  upgrade.md  validate.md
docs/features/: azure.md  caching.md  dashboard.md  deep-agents.md  editor-integrations.md  enterprise.md  flow-dag.md  mcp-connector.md  mcp-tools.md  prompts.md  scaffolding.md
docs/releases/: 0.17.0.md  1.1.0.md  1.4.0.md  index.md
examples/: README.md  deep_agent_demo.py  flow_demo.py  mcp_toolkit_client.py  mcp_toolkit_server.py
integrations/claude-plugin/: .mcp.json  README.md
integrations/claude-plugin/.claude-plugin/: plugin.json
integrations/claude-plugin/commands/: new-agent.md
integrations/vscode/: .vscodeignore  README.md  extension.js  package.json
integrations/vscode-agentx/: .vscodeignore  README.md  agentx-0.1.0.vsix  agentx-kit-0.1.0.vsix  extension.js  package.json
src/agentx/: __init__.py  cache.py  cli.py  config.py  guardrails.py  logging_config.py  reliability.py
src/agentx/agents/: __init__.py  _workspace.py  autonomous.py  deep_agent.py  research.py
src/agentx/azure/: __init__.py  _logging.py  _retry.py  azureml.py  blob.py  cli.py  config.py  containerapp.py  cosmos.py  credentials.py  eventgrid.py  keyvault.py  monitor.py  pipeline.py  servicebus.py  yaml_config.py
src/agentx/azure/templates/: __init__.py  aiops.py  chatbot.py  document_ai.py  mlops.py  rag.py
src/agentx/connector/: __init__.py  build.py  recommend.py  server.py
src/agentx/dashboard/: __init__.py  app.py
src/agentx/flow/: __init__.py  _ast_helpers.py  _serve_runner.py  execrun.py  gitmeta.py  htmlgen.py  model.py  project.py  render.py  schema.py  server.py  static.py  tracer.py  typecheck.py
src/agentx/flow/viewer/: app.js  react-viewer.html  viewer.html.j2
src/agentx/flow/viewer-react/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/agentx/flow/viewer-react/public/: mock-data.json
src/agentx/flow/viewer-react/src/: App.css  App.tsx  api.ts  data.ts  index.css  types.ts
src/agentx/flow/viewer-react/src/components/: Header.tsx  LogPane.tsx  SidePanel.tsx
src/agentx/flow/viewer-react/src/graph/: visibility.ts
src/agentx/flow/viewer-react/src/hooks/: useLiveExec.ts
src/agentx/flow/viewer-react/src/layout/: elk.ts
src/agentx/frameworks/: crewai_agent.py  langchain_agent.py
src/agentx/insights/: __init__.py  analyze.py  evals.py  log.py  optimize.py  tokens.py
src/agentx/memory/: store.py
src/agentx/providers/: base.py  catalog.py  factory.py  registry.py
src/agentx/rag/: __init__.py  embeddings.py  loaders.py  manifest.py  pipeline.py
src/agentx/scaffold/: domains.py  generator.py  graphviz.py  spec.py  upgrade.py  validate.py  wizard.py
src/agentx/scaffold/templates/: README.md.j2  ci.yml.j2  env.example.j2  gitignore.j2  mcp_servers.json.j2  pyproject.toml.j2  streamlit_app.py.j2
src/agentx/scaffold/templates/pkg/: config.py.j2  crew.py.j2  graph.py.j2  main.py.j2  memory.py.j2  nodes.py.j2  rag.py.j2  server.py.j2  state.py.j2  tools.py.j2
src/agentx/scaffold/templates/pkg/claw/: __init__.py.j2  assistant.py.j2  intent.py.j2  webhook.py.j2
src/agentx/scaffold/templates/pkg/libs/: __init__.py.j2  agent_factory.py.j2  logging_setup.py.j2  voice.py.j2
src/agentx/scaffold/templates/tests/: test_main.py.j2
src/agentx/skills/: registry.py
src/agentx/swarm/: __init__.py  subagent.py
src/agentx/tools/: __init__.py  builtin.py  coerce.py  mcp.py  mcp_server.py
src/agentx/voice/: __init__.py  stt.py  tts.py
tests/: test_agents.py  test_azure_azureml.py  test_azure_blob.py  test_azure_cli.py  test_azure_containerapp.py  test_azure_cosmos.py  test_azure_eventgrid.py  test_azure_keyvault.py  test_azure_monitor.py  test_azure_pipeline.py  test_azure_servicebus.py  test_azure_templates_aiops.py  test_azure_templates_chatbot.py  test_azure_templates_document_ai.py  test_azure_templates_mlops.py  test_azure_templates_rag.py  test_azure_yaml_config.py  test_cache.py  test_cli_new.py  test_config_and_logging.py  test_connector.py  test_deep_agent.py  test_enterprise.py  test_flow_cli.py  test_flow_execrun.py  test_flow_gitmeta.py  test_flow_html.py  test_flow_model.py  test_flow_project.py  test_flow_render.py  test_flow_schema.py  test_flow_server.py  test_flow_static.py  test_flow_tracer.py  test_flow_typecheck.py  test_insights.py  test_mcp_server_tools.py  test_providers.py  test_rag_loaders.py  test_rag_pipeline.py  (+8 more)
(+20 files in other folders)
