[project]
# PyPI distribution name (import name + CLI stay `agentx`; `agentx` was taken).
name = "agentx-kit"
version = "0.15.0"
description = "An open-source, provider-agnostic agentic framework + interactive project scaffolder for LangChain and CrewAI. Pick your LLM provider, agents, RAG, memory, MCP tools and skills — generate a ready-to-run uv project."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "OptimumAI" }]
keywords = ["agents", "llm", "langchain", "crewai", "rag", "mcp", "scaffold", "openrouter", "bedrock", "vertex", "azure", "gemini", "huggingface", "embeddings", "cohere", "voyage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

# Core deps: the CLI/scaffolder + provider-agnostic base abstractions.
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
# ---- LLM providers (install only what you use) ----
openai = ["langchain-openai>=0.2.0"]
azure = ["langchain-openai>=0.2.0"]
openrouter = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.2.0"]
google = ["langchain-google-genai>=2.0.0"]
vertex = ["langchain-google-vertexai>=2.0.0"]
bedrock = ["langchain-aws>=0.2.0"]
groq = ["langchain-groq>=0.2.0"]
ollama = ["langchain-ollama>=0.2.0"]
huggingface = ["langchain-huggingface>=0.1.0", "sentence-transformers>=3.0.0"]
cohere = ["langchain-cohere>=0.3.0"]
mistral = ["langchain-mistralai>=0.2.0"]
voyage = ["langchain-voyageai>=0.3.0"]
faiss = ["faiss-cpu>=1.8.0", "langchain-community>=0.3.0"]
pdf = ["pypdf>=4.0.0"]
excel = ["openpyxl>=3.1.0"]
docx = ["python-docx>=1.1.0"]

# ---- Frameworks / capabilities ----
langgraph = ["langgraph>=0.2.0", "langchain>=0.3.0"]
crewai = ["crewai>=0.70.0"]
rag = ["langchain-community>=0.3.0", "langchain-text-splitters>=0.3.0", "chromadb>=0.5.0"]
mcp = ["langchain-mcp-adapters>=0.1.0", "mcp>=1.2.0"]

# ---- Enterprise capabilities ----
observability = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "openinference-instrumentation-langchain>=0.1.0",
]
server = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "sse-starlette>=2.0.0"]
dashboard = ["streamlit>=1.40.0", "tiktoken>=0.7.0", "pandas>=2.0.0"]
connector = ["mcp>=1.2.0"]

# ---- Voice (STT/TTS) — local-first, no key required ----
voice = ["faster-whisper>=1.0.0", "edge-tts>=6.1.0", "pyttsx3>=2.90"]
# ---- Streamlit UI (chat + voice + claw assistant) ----
streamlit = ["streamlit>=1.40.0"]

# ---- Bundles ----
all = [
    "langchain-openai>=0.2.0", "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0", "langchain-google-vertexai>=2.0.0",
    "langchain-aws>=0.2.0", "langchain-groq>=0.2.0", "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0", "sentence-transformers>=3.0.0",
    "langchain-cohere>=0.3.0", "langchain-mistralai>=0.2.0", "langchain-voyageai>=0.3.0",
    "faiss-cpu>=1.8.0", "pypdf>=4.0.0", "openpyxl>=3.1.0", "python-docx>=1.1.0",
    "langgraph>=0.2.0", "langchain>=0.3.0",
    "langchain-community>=0.3.0", "langchain-text-splitters>=0.3.0", "chromadb>=0.5.0",
    "langchain-mcp-adapters>=0.1.0", "mcp>=1.2.0",
    "opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "sse-starlette>=2.0.0",
    "streamlit>=1.40.0", "tiktoken>=0.7.0", "pandas>=2.0.0",
    "mcp>=1.2.0",
    "faster-whisper>=1.0.0", "edge-tts>=6.1.0", "pyttsx3>=2.90",
]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
agentx = "agentx.cli:app"

[project.urls]
Homepage = "https://github.com/muhammadyahiya/agentx-kit"
Repository = "https://github.com/muhammadyahiya/agentx-kit"
Issues = "https://github.com/muhammadyahiya/agentx-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".venv",
    ".venv-dev",
    "dist",
    "__pycache__",
    "*.pyc",
]

[tool.hatch.build.targets.wheel]
# Templates (*.j2) live inside the package dir and are included automatically.
packages = ["src/agentx"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
